Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26158

Folderlistmodel "showDirs" option not working

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 5.0.0 Beta 1
    • None
    • PC Ubuntu 10.04 LTS + 5.0 Alpha

    Description

      See in 5.0 Alpha version.
      Local variable overwrites member variable in file "qtdeclarative/src/imports/folderlistmodel/fileinfothread.cpp":

      void FileInfoThread::setShowDirsFirst(bool showDirsFirst)
      {
          QMutexLocker locker(&mutex);
          showDirsFirst = showDirsFirst;
          folderUpdate = true;
          condition.wakeAll();
      }
      

      should be changed in:

      void FileInfoThread::setShowDirsFirst(bool value)
      {
          QMutexLocker locker(&mutex);
          showDirsFirst = value;
          folderUpdate = true;
          condition.wakeAll();
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            agroyer Anthony Groyer
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes