Don't shadow member variable with argument.

Function argument is being written to itself rather than the member
variable preventing the property from ever changing.

Task-number: QTBUG-26158
Change-Id: Id204a193300c62feeb007a2ea9df89cba5e1d513
Reviewed-by: Alan Alpert <alan.alpert@nokia.com>